Gateway_Envoy/http_route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend
spec:
  parentRefs:
    - name: eg
  hostnames:
    # Custom Domain
    - "mlops.dakshsawhneyy.online"
  rules:
    # Backend Configuration
    - backendRefs:
        - group: ""
          kind: Service
          name: wine-prediction-service
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
